--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@ body, html {
     height: 100%;
     margin: 0;
     display: flex;
-    justify-content: center;  /* Centra horizontalmente */
+    justify-content: center;  
     align-items: center; 
  
 }
@@ -40,15 +40,6 @@ button {
 button:hover {
     background: #fc5cc7;
 }
-
-/*footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 15px;
-    width: 100%;
-    position: relative;
-}*/
 
 .weather-info {
     font-size: 18px;
